--- a/hacknc/templates/landing.html
+++ b/hacknc/templates/landing.html
@@ -2,6 +2,19 @@
 
 {% block content %}
 
-<p>Test</p>
+<div class="row">
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-8">
+    	<center>
+    		<p2>
+    			<br></br>
+    			Info here pls
+    		</p2>
+    	</center>
+    </div>
+    <div class="col-sm-2">
+    </div>
+  </div>
 
 {% endblock %}
