--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -1,4 +1,4 @@
-
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +12,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/datatables.min.css"/>
 
-
+	<link rel="stylesheet" href="{% static 'css/style.css' %}"/>
 
 	<style type="text/css">
 	html,
@@ -25,9 +25,35 @@
 
 <body>
 	
-	<h1>Hello World</h1>
+	<center><h1>Ultimate Housing</h1></center>
+	
+	<nav class="navbar-dark bg-primary navbar-expand-sm">
+		<div class="container-fluid">
+    		<ul class="navbar-nav justify-content-center">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Tournaments</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Login/Registration</a>
+				</li>
+			</ul>
+  		</div>
+	</nav>
 
 	{% block content %}
 
 	{% endblock %}
+	
+	<footer class="page-footer font-small blue fixed-bottom">
+		<div class="footer-copyright text-center py-3">Contact Info:
+    		<a href="https://mdbootstrap.com/bootstrap-tutorial/"> Email: email@email.email</a>
+  		</div>
+	</footer>
+	
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
