--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -31,13 +31,16 @@
 		<div class="container-fluid">
     		<ul class="navbar-nav justify-content-center">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Home</a>
+					<a class="nav-link" href="/">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Tournaments</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Login/Registration</a>
+					<a class="nav-link" href="/accounts/login/">Login</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Register</a>
 				</li>
 			</ul>
   		</div>
