--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -40,7 +40,7 @@
 					<a class="nav-link" href="/accounts/login/">Login</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Register</a>
+					<a class="nav-link" href="/accounts/signup/">Register</a>
 				</li>
 			</ul>
   		</div>
