--- a/hacknc/housing/templates/housing/tournament-detail.html
+++ b/hacknc/housing/templates/housing/tournament-detail.html
@@ -2,4 +2,8 @@
 
 {% block content %}
 <h1>{{ tournament.name }}</h1>
+<h1>{{ tournament.date_start }}</h1>
+<h1>{{ tournament.date_end }}</h1>
+<h1>{{ tournament.description }}</h1>
+<h1>{{ tournament.location }}</h1>
 {% endblock %}
