--- a/hacknc/housing/templates/housing/tournament-list.html
+++ b/hacknc/housing/templates/housing/tournament-list.html
@@ -4,9 +4,25 @@
 
 <h1>Tournaments</h1>
 
-<ul>
-{% for tournament in tournament_list %}
-  <li class="list-group-item"><a href="{{ tournament.get_absolute_url }}">{{ tournament.name }}</a></li>
-{% endfor %}
-</ul>
+<table class="table">
+	<thead>
+		<tr>
+			<th scope="col">Name</th>
+			<th scope="col">Location</th>
+			<th scope="col">Start Date</th>
+			<th scope="col">End Date</th>
+		</tr>
+	</thead>
+	<tbody>
+      	{% for tournament in tournament_list %}
+      		<tr>
+  				<td scope="row"><a href="{{ tournament.get_absolute_url }}">{{ tournament.name }}</a></td>
+  				<td scope="row">{{ tournament.location }}</td>
+  				<td scope="row">{{ tournament.date_start }}</td>
+  				<td scope="row">{{ tournament.date_end }}</td>
+  			</tr>
+		{% endfor %}
+	</tbody>
+</table>
+
 {% endblock %}
