--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -3,13 +3,13 @@
 <html lang="en">
 
 <head>
-	<title>Tournament Housing</title>
+	<title>{% block title %}Tournament Housing{% endblock %}</title>
 	<meta charset="utf-8" />
-	
-	
+
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<meta name="viewport" content = "width=device-width, initial-scale=1.0">
-	
+
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/datatables.min.css"/>
 
 	<link rel="stylesheet" href="{% static 'css/style.css' %}"/>
@@ -18,15 +18,15 @@
 	html,
 	body {
 		height:100%
-	}	
+	}
 	</style>
-	
+
 </head>
 
 <body>
-	
+
 	<center><h1>Ultimate Housing</h1></center>
-	
+
 	<nav class="navbar-dark bg-primary navbar-expand-sm">
 		<div class="container-fluid">
     		<ul class="navbar-nav justify-content-center">
@@ -50,21 +50,19 @@
     <div class="col-sm-2">
     </div>
     <div class="col-sm-8">
-    		{% block content %}
-
+  		{% block content %}
 			{% endblock %}
     </div>
     <div class="col-sm-2">
     </div>
   </div>
-	
-	
+
 	<footer class="page-footer font-small blue fixed-bottom">
 		<div class="footer-copyright text-center py-3">Contact Info:
     		<a href="https://mdbootstrap.com/bootstrap-tutorial/"> Email: email@email.email</a>
   		</div>
 	</footer>
-	
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
