--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -45,23 +45,27 @@
 			</ul>
   		</div>
 	</nav>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-2">
+			</div>
+			<div class="col-sm-8">
+				{% block content %}
+				{% endblock %}
+			</div>
+			<div class="col-sm-2">
+			</div>
+		</div>
 
-<div class="row">
-    <div class="col-sm-2">
-    </div>
-    <div class="col-sm-8">
-  		{% block content %}
-			{% endblock %}
-    </div>
-    <div class="col-sm-2">
-    </div>
-  </div>
+		<div class="row">
+			<footer class="page-footer font-small blue">
+				<div class="footer-copyright text-center py-3">Contact Info:
+					<a href="https://mdbootstrap.com/bootstrap-tutorial/"> Email: email@email.email</a>
+				</div>
+			</footer>
 
-	<footer class="page-footer font-small blue fixed-bottom">
-		<div class="footer-copyright text-center py-3">Contact Info:
-    		<a href="https://mdbootstrap.com/bootstrap-tutorial/"> Email: email@email.email</a>
-  		</div>
-	</footer>
+		</div>
+	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
