--- a/hacknc/templates/registration/signup.html
+++ b/hacknc/templates/registration/signup.html
@@ -10,7 +10,7 @@
         {{ field|as_crispy_field }}
       </p>
     {% endfor %}
-    <button type="submit">Sign up</button>
+    <button class="btn btn-primary" type="submit">Sign up</button>
     <br>
     <br>
   </form>
