--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -1,88 +1,59 @@
 {% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+	  <meta name="viewport" content = "width=device-width, initial-scale=1.0">
 
-<head>
-	<title>{% block title %}Tournament Housing{% endblock %}</title>
-	<meta charset="utf-8" />
+	  <title>{% block title %}Tournament Housing{% endblock %}</title>
 
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+	</head>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<meta name="viewport" content = "width=device-width, initial-scale=1.0">
-
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/datatables.min.css"/>
-
-	<link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-
-	<style type="text/css">
-	html,
-	body {
-		height:100%
-	}
-	</style>
-
-</head>
-
-<body>
-
-	<center><h1>Ultimate Housing</h1></center>
-
-	<nav class="navbar-dark bg-primary navbar-expand-sm">
-		<div class="container-fluid">
-    		<ul class="navbar-nav justify-content-center">
-				<li class="nav-item">
-					<a class="nav-link" href="/">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'housing:tournament-list' %}">Tournaments</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'login' %}">Login</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/accounts/signup/">Register</a>
-				</li>
-			</ul>
-  		</div>
-	</nav>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-2">
-			</div>
-			<div class="col-sm-8">
-				{% block content %}
-				{% endblock %}
-			</div>
-			<div class="col-sm-2">
-			</div>
-		</div>
-
-		<div class="row">
-			<footer class="page-footer font-small blue">
-				<div class="footer-copyright text-center py-3">Contact Info:
-					<a href="https://mdbootstrap.com/bootstrap-tutorial/"> Email: email@email.email</a>
+	<body>
+		<header>
+			<h1 class="text-center">Ultimate Housing</h1>
+			<nav class="navbar-dark bg-primary navbar-expand-sm">
+				<div class="container-fluid">
+					<ul class="navbar-nav justify-content-center">
+						<li class="nav-item">
+							<a class="nav-link" href="/">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'housing:tournament-list' %}">Tournaments</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'login' %}">Login</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/accounts/signup/">Register</a>
+						</li>
+					</ul>
 				</div>
-			</footer>
+			</nav>
+		</header>
 
-		</div>
-	</div>
+		<main class="container-fluid">
+			<div class="row">
+				<div class="offset-md-2 col-md-8 col-sm-12">
+					{% block content %}
+					{% endblock %}
+				</div>
+			</div>
+		</main>
 
+		<footer class="container-fluid page-footer font-small blue">
+			<div class="row">
+				<p class="col-sm-12 text-center">
+					Email: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwiCgq31yvLdAhXM1lkKHWE0BjIQyCkwAHoECAQQBA&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU" target="_blank">email@email.email</a>
+				</p>
+			</div>
+		</footer>
 
-			{% endblock %}
-    </div>
-    <div class="col-sm-2">
-    </div>
-</div>
-	
-	
-	<footer class="page-footer font-small blue fixed-bottom">
-		<div class="footer-copyright text-center py-3">Contact Info:
-    		<a href="https://mdbootstrap.com/bootstrap-tutorial/"> Email: email@email.email</a>
-  		</div>
-	</footer>
-	
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	</body>
+</html>
