--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -28,7 +28,7 @@
 							<a class="nav-link" href="{% url 'login' %}">Login</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/accounts/signup/">Register</a>
+							<a class="nav-link" href="{% url 'logout' %}">Register</a>
 						</li>
 					</ul>
 				</div>
