Update footer styling.

--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -24,12 +24,18 @@
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'housing:tournament-list' %}">Tournaments</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{% url 'login' %}">Login</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{% url 'logout' %}">Register</a>
-						</li>
+						{% if request.user.is_authenticated %}
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+							</li>
+						{% else %}
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'login' %}">Log In</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'signup' %}">Register</a>
+							</li>
+						{% endif %}
 					</ul>
 				</div>
 
@@ -45,11 +51,19 @@
 			</div>
 		</main>
 
-		<footer class="container-fluid page-footer font-small blue">
+		<footer class="container-fluid bg-light py-5">
 			<div class="row">
-				<p class="col-sm-12 text-center">
-					Email: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwiCgq31yvLdAhXM1lkKHWE0BjIQyCkwAHoECAQQBA&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU" target="_blank">email@email.email</a>
-				</p>
+				<div class="col-md-6">
+					<h4>Links</h4>
+					<ul>
+						<li><a href="{% url 'admin:index' %}">Admin</a></li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<h4>Contact</h4>
+					<p>
+						Email: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwiCgq31yvLdAhXM1lkKHWE0BjIQyCkwAHoECAQQBA&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU" target="_blank">email@email.email</a>
+					</p>
 			</div>
 		</footer>
 
