--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -51,19 +51,19 @@
 			</div>
 		</main>
 
-		<footer class="container-fluid bg-light py-5">
-			<div class="row">
-				<div class="col-md-6">
-					<h4>Links</h4>
-					<ul>
-						<li><a href="{% url 'admin:index' %}">Admin</a></li>
-					</ul>
+		<footer class="bg-light py-5">
+			<div class="container">
+				<div class="row">
+					<div class="offset-md-2 col-md-4">
+						<h4>Links</h4>
+						<p><a href="{% url 'admin:index' %}">Admin</a></p>
+					</div>
+					<div class="col-md-4 text-right">
+						<h4>Contact</h4>
+						<p>
+							Email: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwiCgq31yvLdAhXM1lkKHWE0BjIQyCkwAHoECAQQBA&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU" target="_blank">email@email.email</a>
+						</p>
 				</div>
-				<div class="col-md-6">
-					<h4>Contact</h4>
-					<p>
-						Email: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwiCgq31yvLdAhXM1lkKHWE0BjIQyCkwAHoECAQQBA&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU" target="_blank">email@email.email</a>
-					</p>
 			</div>
 		</footer>
 
