--- a/hacknc/templates/registration/login.html
+++ b/hacknc/templates/registration/login.html
@@ -3,20 +3,17 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h2>Login</h2>
 <div class="row">
-	<div class="col-sm-3">
-	</div>
-	<div class="col-sm-6">
-	<form method="post">
-		{% csrf_token %}
-		{{ form|crispy }}
-		<button class="btn btn-primary"type="submit">Login</button>
-	</form>
+	<div class="offset-md-3 col-md-6 offset-lg-4 col-lg-4">
+    <h2>Login</h2>
+    <div class="alert alert-info">
+      <p class="m-0">Don't have an account? <a href="{% url 'signup' %}">Register</a> for one.</p>
+    </div>
+  	<form method="post">
+  		{% csrf_token %}
+  		{{ form|crispy }}
+  		<button class="btn btn-primary"type="submit">Login</button>
+  	</form>
+  </div>
 </div>
-<div class="col-sm-3">
-</div>
-</div>
-
-
 {% endblock %}
