--- a/hacknc/templates/registration/signup.html
+++ b/hacknc/templates/registration/signup.html
@@ -1,18 +1,19 @@
 {% extends 'base.html' %}
 
 {% load crispy_forms_tags %}
-{% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-      <p>
-        {{ field|as_crispy_field }}
-      </p>
-    {% endfor %}
-    <button class="btn btn-primary" type="submit">Sign up</button>
-    <br>
-    <br>
-  </form>
 
+{% block content %}
+<div class="row">
+  <div class="offset-md-2 col-md-8 offset-lg-3 col-lg-6">
+    <h2>Sign Up</h2>
+    <div class="alert alert-info">
+      <p class="m-0">Already have an account? <a href="{% url 'login' %}">Log In</a>.</p>
+    </div>
+    <form method="post">
+      {% csrf_token %}
+      {{ form|crispy }}
+      <button class="btn btn-primary"type="submit">Sign Up</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
