Link tournament add to tournament create page.

--- a/hacknc/housing/templates/housing/tournament-list.html
+++ b/hacknc/housing/templates/housing/tournament-list.html
@@ -6,7 +6,7 @@
 		<h1>Tournaments</h1>
 	</div>
 	<div class="col-sm-3 text-right">
-		<a class="btn btn-primary" href="#" role="button">Add Tournament</a>
+		<a class="btn btn-primary" href="{% url 'housing:tournament-create' %}" role="button">Add Tournament</a>
 	</div>
 </div>
 
