--- a/hacknc/housing/templates/housing/tournament-create.html
+++ b/hacknc/housing/templates/housing/tournament-create.html
@@ -5,10 +5,14 @@
 {% block title %}Add a Tournament{% endblock %}
 
 {% block content %}
-<h1>Add a Tournament</h1>
-<form method="post">
-  {{ form|crispy }}
-  {% csrf_token %}
-  <button class="btn btn-primary" type="submit">Create Tournament</button>
-</form>
+<div class="row">
+  <div class="offset-md-2 col-md-8">
+    <h1>Add a Tournament</h1>
+    <form method="post">
+      {{ form|crispy }}
+      {% csrf_token %}
+      <button class="btn btn-primary" type="submit">Create Tournament</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
