--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -15,7 +15,7 @@
 	<body>
 		<header>
 			<h1 class="text-center">Ultimate Housing</h1>
-			<nav class="navbar-dark bg-primary navbar-expand-sm">
+			<nav class="navbar-dark navbar-expand-sm" style="background-color: #5d92d3">
 				<div class="container-fluid">
 					<ul class="navbar-nav justify-content-center">
 						<li class="nav-item">
