--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 	  <meta name="viewport" content = "width=device-width, initial-scale=1.0">
 
-	  <title>{% block title %}Tournament Housing{% endblock %}</title>
+	  <title>{% block title %}Ultimate Housing{% endblock %}</title>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="{% static 'css/style.css' %}"/>
@@ -14,10 +14,12 @@
 
 	<body>
 		<header>
-			<h1 class="text-center">Ultimate Housing</h1>
 			<nav class="navbar-dark navbar-expand-sm" style="background-color: #5d92d3">
 				<div class="container-fluid">
 					<ul class="navbar-nav justify-content-center">
+						<li class="nav-item">
+							<a class="navbar-brand" href="#">Navbar</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/">Home</a>
 						</li>
