--- a/hacknc/templates/landing.html
+++ b/hacknc/templates/landing.html
@@ -7,11 +7,11 @@
 		Ultimate Housing
 	</h1>
 	<p class="lead">
-		I need some help.
+		An application that easily finds your team free housing.
 	</p>
 	<hr class="my-2">
 	<p>
-		I still need help.
+		Create a tournament or find an existing one
 	</p>
 	<a class="btn btn-primary" href="{% url 'housing:tournament-list' %}" role="button">
 		Find Tournament
