--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -28,6 +28,9 @@
 						</li>
 						{% if request.user.is_authenticated %}
 							<li class="nav-item">
+								<a class="nav-link" href="#">Profile</a>
+							</li>
+							<li class="nav-item">
 								<a class="nav-link" href="{% url 'logout' %}">Log Out</a>
 							</li>
 						{% else %}
