--- a/hacknc/housing/templates/housing/tournament-detail.html
+++ b/hacknc/housing/templates/housing/tournament-detail.html
@@ -59,6 +59,17 @@
             </div>
         </div>
     </div>
+    <div class="row mt-4">
+        <div class="col text-center">
+            
+            <iframe width="600" height="400" 
+            frameborder="0" style="border:0"
+            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD9DlzWco-IDu97eFELfA_lwZn17c0Qwnk
+            &q={{tournament.location|urlencode}}" allowfullscreen>
+        </iframe>
+
+        </div>
+    </div>
 
 
 
