--- a/hacknc/static/css/style.css
+++ b/hacknc/static/css/style.css
@@ -8,3 +8,11 @@ main {
   flex: 1;
   margin: 2em 0;
 }
+
+.map iframe {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
