--- a/hacknc/templates/registration/profile.html
+++ b/hacknc/templates/registration/profile.html
@@ -3,6 +3,31 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+{% for tournament in user.tournaments.all %}
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">{{tournament.name}}</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				...
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+{% endfor %}
+
 <div class="container">
 	<div class="row">
 		<div class="col-sm-4">
@@ -26,11 +51,14 @@
 			<h3>Match Info</h3>
 
 			<h4>Tournaments</h4>
-			<div class="list-group">
+			<ul class="list-group">
 				{% for tournament in user.tournaments.all %}
-				<a href="#" class="list-group-item list-group-item-action">{{tournament.name}}</a>
+				<li class="list-group-item "><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+					{{tournament.name}}
+				</button></li>
 				{% endfor %}
-			</div>
+			</ul>
+
 			<br>
 			<h4>Teams</h4>
 			<div class="list-group">
