--- a/hacknc/templates/registration/profile.html
+++ b/hacknc/templates/registration/profile.html
@@ -67,7 +67,7 @@
 					</div>
 					<div class="col-sm-4 text-right">
 						{% if tournament.is_locked %}
-					<button type="button" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#exampleModal">View more</button>
+					<button type="button" class="btn btn-sm btn-warning" data-toggle="modal" data-target="#exampleModal">View more</button>
 					{% else %}
 					<button type="button" class="btn btn-sm btn-outline-secondary" disabled="">View More</button>
 					{% endif %}
