--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -14,12 +14,10 @@
 
 	<body>
 		<header>
-			<nav class="navbar-dark navbar-expand-sm" style="background-color: #5d92d3">
-				<div class="container-fluid">
-					<ul class="navbar-nav justify-content-center">
-						<li class="nav-item">
-							<a class="navbar-brand" href="#">Navbar</a>
-						</li>
+			<nav class="navbar navbar-dark bg-dark navbar-expand-sm">
+				<div class="container">
+					<a class="navbar-brand" href="#">Navbar</a>
+					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" href="/">Home</a>
 						</li>
@@ -47,14 +45,15 @@
 			</nav>
 		</header>
 
-		<main class="container-fluid">
-			<div class="row">
-				<div class="offset-md-2 col-md-8 col-sm-12">
-					{% block content %}
-					{% endblock %}
+		{% block main %}
+			<main class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						{% block content %}{% endblock %}
+					</div>
 				</div>
-			</div>
-		</main>
+			</main>
+		{% endblock %}
 
 		<footer class="bg-light py-5">
 			<div class="container">
