--- a/hacknc/templates/landing.html
+++ b/hacknc/templates/landing.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 
-<div class="hero" style="background-image: url('{% static 'images/mountains.jpg' %}">
+<div class="hero" style="background-image: url('{% static 'images/field.jpg' %}">
 	<div class="container">
 		<div class="jumbotron jumbotron--hero my-5 text-center">
 			<h1 class="display-2">
