--- a/hacknc/static/css/style.css
+++ b/hacknc/static/css/style.css
@@ -12,7 +12,7 @@ main {
 
 .hero {
   background-size: cover;
-  background-position: center;
+  background-position: top center;
   min-height: 90vh;
 }
 
