--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 	  <meta name="viewport" content = "width=device-width, initial-scale=1.0">
 
-	  <title>{% block title %}Ultimate Housing{% endblock %}</title>
+	  <title>{% block title %}crowdhost.us{% endblock %}</title>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="{% static 'css/style.css' %}"/>
@@ -16,7 +16,7 @@
 		<header>
 			<nav class="navbar navbar-dark bg-dark navbar-expand-sm">
 				<div class="container">
-					<a class="navbar-brand" href="#">Navbar</a>
+					<a class="navbar-brand" href="#">crowdhost.us</a>
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" href="/">Home</a>
