--- a/hacknc/templates/landing.html
+++ b/hacknc/templates/landing.html
@@ -7,9 +7,7 @@
 <div class="hero" style="background-image: url('{% static 'images/field.jpg' %}">
 	<div class="container">
 		<div class="jumbotron jumbotron--hero my-5 text-center">
-			<h1 class="display-2">
-				Ultimate Housing
-			</h1>
+			<img class="img-fluid logo" src="{% static 'images/logo.png' %}">
 			<p class="lead mb-4">
 				Find housing for your team or host a group of players. It's all organized for you.
 			</p>
