--- a/hacknc/static/css/style.css
+++ b/hacknc/static/css/style.css
@@ -20,14 +20,23 @@ main {
   opacity: .8;
 }
 
-.map iframe {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+.google-maps {
+  position: relative;
+  padding-bottom: 40%; // This is the aspect ratio
+  height: 0;
+  overflow: hidden;
+}
+.google-maps iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 
+.logo {
+  max-width: 70%;
+}
 
 
