--- a/hacknc/templates/base.html
+++ b/hacknc/templates/base.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 	  <meta name="viewport" content = "width=device-width, initial-scale=1.0">
 
-	  <title>{% block title %}crowdhost.us{% endblock %}</title>
+	  <title>{% block title %}Crowdhost{% endblock %}</title>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="{% static 'css/style.css' %}"/>
@@ -16,7 +16,7 @@
 		<header>
 			<nav class="navbar navbar-dark bg-dark navbar-expand-sm">
 				<div class="container">
-					<a class="navbar-brand" href="#">crowdhost.us</a>
+					<a class="navbar-brand" href="#">Crowdhost</a>
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" href="/">Home</a>
@@ -58,15 +58,12 @@
 		<footer class="bg-light py-5">
 			<div class="container">
 				<div class="row">
-					<div class="offset-md-2 col-md-4">
-						<h4>Links</h4>
-						<p><a href="{% url 'admin:index' %}">Admin</a></p>
-					</div>
-					<div class="col-md-4 text-right">
-						<h4>Contact</h4>
-						<p>
-							Email: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwiCgq31yvLdAhXM1lkKHWE0BjIQyCkwAHoECAQQBA&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU" target="_blank">email@email.email</a>
-						</p>
+					<div class="col text-right">
+					<ul class="list-inline">
+							<li class="list-inline-item"><a href="{% url 'admin:index' %}">Admin</a></li>
+							<li class="list-inline-item"><a href="{% url 'about' %} ">About</a></li>
+							<li class="list-inline-item"><a href="{% url 'contact' %} ">Contact</a></li>
+						</ul>	
 				</div>
 			</div>
 		</footer>
