--- a/hacknc/templates/registration/profile.html
+++ b/hacknc/templates/registration/profile.html
@@ -6,7 +6,7 @@
 {% for tournament in user.tournaments.all %}
 
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="{{tournament.slug}}modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -16,11 +16,27 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				...
+				<h6>Match Status per Team</h6>
+				<div class="list-group">
+				{% for team in tournament.teams.all %}
+
+				{% if team.hostteammatch %}
+				<a href="{{team.hostteammatch.get_absolute_url}}" class="list-group-item list-group-item-action">{{team.name}} - matched with host(s): 
+				{% for host in team.hostteammatch.hosts.all%}
+				{{host.name}}, 
+				{% endfor %}</a>
+
+				{% else %}
+				<p class="list-group-item list-group-item-action">{{team.name}} - no match yet</p>
+				{% endif %}
+				{% endfor %}
+			</div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
+				<form action="{% url 'housing:matcher' tournament.slug_key tournament.slug %}" method="POST">
+				<button type="submit" class="btn btn-primary">Run Matcher</button>
+			</form>
 			</div>
 		</div>
 	</div>
@@ -67,9 +83,9 @@
 					</div>
 					<div class="col-sm-4 text-right">
 						{% if tournament.is_locked %}
-					<button type="button" class="btn btn-sm btn-warning" data-toggle="modal" data-target="#exampleModal">View more</button>
+					<button type="button" class="btn btn-sm btn-warning" data-toggle="modal" data-target="#{{tournament.slug}}modal">View more</button>
 					{% else %}
-					<button type="button" class="btn btn-sm btn-outline-secondary" disabled="">View More</button>
+					<button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#{{tournament.slug}}modal">View More</button>
 					{% endif %}
 					</div>
 				</div>
