google maps directions

--- a/hacknc/housing/templates/housing/match-detail.html
+++ b/hacknc/housing/templates/housing/match-detail.html
@@ -25,8 +25,7 @@
 <div class="col-sm-8">
 	<div class="google-maps"><iframe width="500" height="200"
             frameborder="0" style="border:0"
-            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD9DlzWco-IDu97eFELfA_lwZn17c0Qwnk
-            &q={{host.address|urlencode}}" allowfullscreen>
+            src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyD9DlzWco-IDu97eFELfA_lwZn17c0Qwnk&origin={{host.address|urlencode}}&destination={{match.team.tournament.location|urlencode}}" allowfullscreen>
         </iframe></div>
 </div>
 </div>
