--- a/hacknc/templates/registration/profile.html
+++ b/hacknc/templates/registration/profile.html
@@ -35,6 +35,7 @@
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 				<form action="{% url 'housing:matcher' tournament.slug_key tournament.slug %}" method="POST">
+					{% csrf_token %}
 				<button type="submit" class="btn btn-primary">Run Matcher</button>
 			</form>
 			</div>
