--- a/hacknc/housing/templates/housing/tournament-detail.html
+++ b/hacknc/housing/templates/housing/tournament-detail.html
@@ -1,79 +1,69 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-	<h1 class="border-bottom pb-2 mb-5">{{ tournament.name }}</h1>
+  <div class="jumbotron">
+    <h1 class="display-4">{{ tournament.name }}</h1>
+    <p class="lead">
+      {% if tournament.date_start == tournament.date_end %}
+        {{ tournament.date_start }}
+      {% else %}
+        {{ tournament.date_start }} to {{ tournament.date_end }}
+      {% endif %}
+    </p>
+  </div>
 
-    <div class="row">
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Dates</th>
-                <th scope="col">Location</th>
-                <th scope="col">Registration Deadline</th>
-            </tr>
-        </thead>
-        <tbody>
-                <tr>
-                    <td scope="row">{{ tournament.date_start }} - {{tournament.date_end}}</td>
-                    <td scope="row">{{ tournament.location }}</td>
-                    <td scope="row">{{ tournament.date_lockout }}</td>
-                </tr>
-        </tbody>
-    </table>
-</div>
+  <h2>Location</h2>
+  <p>{{ tournament.location }}</p>
 
-    <div class="my-5">
-        {% if tournament.description %}
-            <h3>Description</h3>
-            {{ tournament.description|linebreaks }}
-        {% endif %}
+  <h2>Registration Deadline</h2>
+  <p>
+    Registration for teams and hosts close{% if tournament.is_locked %}d{% else %}s{% endif %} <span class="font-weight-bold">{{ tournament.date_lockout }}</span>.
+  </p>
+
+  {% if tournament.description %}
+    <h4>Description</h4>
+    {{ tournament.description|linebreaks }}
+  {% endif %}
+
+  <div class="row mt-5">
+    {% if tournament.is_locked %}
+    <div class="col-sm-12 alert alert-warning">
+      <p><strong>Tournament Locked</strong></p>
+      <p>This tournament is no longer accepting new hosts or teams.</p>
     </div>
-
-    <div class="row mt-5">
-        {% if tournament.is_locked %}
-            <div class="col-sm-12 alert alert-warning">
-                <p><strong>Tournament Locked</strong></p>
-                <p>This tournament is no longer accepting new hosts or teams.</p>
-            </div>
-        {% else %}
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h3 class="card-title">Register Team</h3>
-                        <p class="card-text">
-                            Register your team for this tournament to be matched with a host.
-                        </p>
-                        <a class="btn btn-primary" href="{% url 'housing:team-create' tournament.slug_key tournament.slug %}">Register Team</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h3 class="card-title">Register Host</h3>
-                        <p class="card-text">
-                            Register your accomodation to host a team for this tournament.
-                        </p>
-                        <a class="btn btn-success" href="{% url 'housing:host-create' tournament.slug_key tournament.slug %}">Register Host</a>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-    </div>
-    <div class="row mt-4">
-        <div class="col text-center">
-            <div class="google-maps">
-            <iframe width="750" height="400"
-            frameborder="0" style="border:0"
-            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD9DlzWco-IDu97eFELfA_lwZn17c0Qwnk
-            &q={{tournament.location|urlencode}}" allowfullscreen>
-        </iframe></div>
-
+    {% else %}
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Register Team</h3>
+          <p class="card-text">
+            Register your team for this tournament to be matched with a host.
+          </p>
+          <a class="btn btn-primary" href="{% url 'housing:team-create' tournament.slug_key tournament.slug %}">Register Team</a>
         </div>
+      </div>
     </div>
-
-
-
-</div>
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Register Host</h3>
+          <p class="card-text">
+            Register your accomodation to host a team for this tournament.
+          </p>
+          <a class="btn btn-success" href="{% url 'housing:host-create' tournament.slug_key tournament.slug %}">Register Host</a>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+  </div>
+  <div class="row mt-4">
+    <div class="col text-center">
+      <div class="google-maps">
+        <iframe width="750" height="400"
+        frameborder="0" style="border:0"
+        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD9DlzWco-IDu97eFELfA_lwZn17c0Qwnk
+        &q={{tournament.location|urlencode}}" allowfullscreen>
+      </iframe>
+    </div>
+  </div>
 {% endblock %}
